--- a/.github/workflows/ecr-push.yml
+++ b/.github/workflows/ecr-push.yml
@@ -102,11 +102,30 @@ jobs:
           kubectl get namespace "$K8S_NAMESPACE" >/dev/null 2>&1 || kubectl create namespace "$K8S_NAMESPACE"
 
           if ! kubectl -n "$K8S_NAMESPACE" get deployment "$K8S_DEPLOYMENT" >/dev/null 2>&1; then
-            echo "Deployment '$K8S_DEPLOYMENT' not found in namespace '$K8S_NAMESPACE'."
-            echo "Set GitHub variables K8S_NAMESPACE and K8S_DEPLOYMENT to existing values, or apply manifests first."
-            kubectl -n "$K8S_NAMESPACE" get deployments || true
-            exit 1
+            cat <<EOF | kubectl -n "$K8S_NAMESPACE" apply -f -
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: ${K8S_DEPLOYMENT}
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: ${K8S_DEPLOYMENT}
+  template:
+    metadata:
+      labels:
+        app: ${K8S_DEPLOYMENT}
+    spec:
+      containers:
+      - name: ${K8S_CONTAINER}
+        image: ${IMAGE_URI}
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
+EOF
+          else
+            kubectl -n "$K8S_NAMESPACE" set image deployment/"$K8S_DEPLOYMENT" "$K8S_CONTAINER=$IMAGE_URI"
           fi
 
-          kubectl -n "$K8S_NAMESPACE" set image deployment/"$K8S_DEPLOYMENT" "$K8S_CONTAINER=$IMAGE_URI"
           kubectl -n "$K8S_NAMESPACE" rollout status deployment/"$K8S_DEPLOYMENT" --timeout=300s
