--- a/.github/workflows/ecr-push.yml
+++ b/.github/workflows/ecr-push.yml
@@ -99,33 +99,15 @@ jobs:
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           IMAGE_URI="$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG"
 
-          kubectl get namespace "$K8S_NAMESPACE" >/dev/null 2>&1 || kubectl create namespace "$K8S_NAMESPACE"
-
-          if ! kubectl -n "$K8S_NAMESPACE" get deployment "$K8S_DEPLOYMENT" >/dev/null 2>&1; then
-            cat <<EOF | kubectl -n "$K8S_NAMESPACE" apply -f -
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: ${K8S_DEPLOYMENT}
-spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: ${K8S_DEPLOYMENT}
-  template:
-    metadata:
-      labels:
-        app: ${K8S_DEPLOYMENT}
-    spec:
-      containers:
-      - name: ${K8S_CONTAINER}
-        image: ${IMAGE_URI}
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 8080
-EOF
-          else
-            kubectl -n "$K8S_NAMESPACE" set image deployment/"$K8S_DEPLOYMENT" "$K8S_CONTAINER=$IMAGE_URI"
+          if ! kubectl get namespace "$K8S_NAMESPACE" >/dev/null 2>&1; then
+            echo "Namespace '$K8S_NAMESPACE' not found. Run: terraform -chdir=iac apply"
+            exit 1
           fi
 
+          if ! kubectl -n "$K8S_NAMESPACE" get deployment "$K8S_DEPLOYMENT" >/dev/null 2>&1; then
+            echo "Deployment '$K8S_DEPLOYMENT' not found in namespace '$K8S_NAMESPACE'. Run: terraform -chdir=iac apply"
+            exit 1
+          fi
+
+          kubectl -n "$K8S_NAMESPACE" set image deployment/"$K8S_DEPLOYMENT" "$K8S_CONTAINER=$IMAGE_URI"
           kubectl -n "$K8S_NAMESPACE" rollout status deployment/"$K8S_DEPLOYMENT" --timeout=300s
